--- a/style.css
+++ b/style.css
@@ -8,6 +8,16 @@
 
 h3 {
     font-weight: 500;
+    font-size: 20px;
+    font-family: system-ui, 
+    -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, 
+    Helvetica Neue, sans-serif;
+}
+
+.text {
+    font-size: 15px;
+    font-weight: 250;
+    text-align: justify;
 }
 
 /* start header section */
@@ -55,8 +65,27 @@ h3 {
     margin-top: 35px;
 }
 
-/* start skills section */
+/* experience section*/
+.company {
+    display: flex;
+    justify-content: space-between;
+}
 
+.company-name {
+    color: #000;
+    font-weight: 400;
+    text-decoration: none;
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
+/* projects section */
+.projects {
+    margin-top: 20px;
+}
+
+/* start skills section */
 .skills-container {
     display: flex;
     justify-content: flex-start;
