--- a/src/App.css
+++ b/src/App.css
@@ -89,11 +89,14 @@ h3 {
 .skills-container {
     display: flex;
     justify-content: flex-start;
-    gap: 5px 7px;
+    gap: 5px 10px;
     flex-wrap: wrap;
 }
 
 .skill-box{
+    display: flex;
+    align-items: center;
+    gap: 5px;
     background-color: #eee;
     font-size: 12px;
     padding: 6px;
