--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,11 @@ h3 {
 
 .text {
     font-size: 15px;
-    font-weight: 250;
+    font-weight: 300;
     text-align: justify;
+    & b {
+        font-weight: 400;
+    }
 }
 
 /* start header section */
@@ -82,7 +85,7 @@ h3 {
 
 /* projects section */
 .projects {
-    margin-top: 45px;
+    margin-top: 150px;
 }
 
 .card-container {
@@ -108,8 +111,8 @@ h3 {
 
 .card-name {
     color: #000;
-    font-size: 14px;
-    font-weight: 400;
+    font-size: 12px;
+    font-weight: 500;
     text-decoration: none;
     &:hover {
         text-decoration: underline;
@@ -119,7 +122,7 @@ h3 {
 .card-text {
     padding: 7px 0 25px 0;
     font-size: 13px;
-    font-weight: 200;
+    font-weight: 300;
 }
 
 .note {
@@ -133,6 +136,11 @@ h3 {
 }
 
 /* start skills section */
+
+.skills-index {
+    margin-bottom: 35px;
+}
+
 .skills-container {
     display: flex;
     justify-content: flex-start;
@@ -143,15 +151,16 @@ h3 {
 .skill-box{
     display: flex;
     align-items: center;
-    gap: 5px;
+    gap: 6px;
     background-color: #eee;
     font-size: 12px;
-    padding: 6px;
+    padding: 8px;
     border-radius: 7px;
     font-weight: 500;
     cursor: pointer;
     &:hover{
-        background-color: #ddd;
+        background-color: #fff;
+        color: #08f;
     }
 }
 
