--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
     font-family: "Roboto", sans-serif;
     font-weight: 300;
     font-style: normal;
+    background-color:   #121212;
 }
 
 h3 {
@@ -25,7 +26,6 @@ h3 {
 
 /* start header section */
 .content {
-    width: 600px;
     display: flex;
     flex-direction: column;
     margin: 60px auto 0 auto;
@@ -137,32 +137,6 @@ h3 {
 
 /* start skills section */
 
-.skills-index {
-    margin-bottom: 35px;
-}
-
-.skills-container {
-    display: flex;
-    justify-content: flex-start;
-    gap: 5px 10px;
-    flex-wrap: wrap;
-}
-
-.skill-box{
-    display: flex;
-    align-items: center;
-    gap: 6px;
-    background-color: #eee;
-    font-size: 12px;
-    padding: 8px;
-    border-radius: 7px;
-    font-weight: 500;
-    cursor: pointer;
-    &:hover{
-        background-color: #fff;
-        color: #08f;
-    }
-}
 
 .box-gradient {
     
